--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 data/*.dat filter=lfs diff=lfs merge=lfs -text
 bin/* filter=lfs diff=lfs merge=lfs -text
+Houdini/* filter=lfs diff=lfs merge=lfs -text
